--- a/app/globals.css
+++ b/app/globals.css
@@ -124,3 +124,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+.sx-react-calendar-wrapper {
+  width: 1200px;
+  max-width: 100vw;
+  height: 800px;
+  max-height: 90vh;
+}
